# cmaketest

./: .gitignore  README.md
maintest/: main.cpp
test1/: CMakeLists.txt
test2/: CMakeLists.txt
test2/common/: myprintf.c
test2/src/: CMakeLists.txt
test2/src1/: CMakeLists.txt  main.c
test3/: CMakeLists.txt
test3/lib/: CMakeLists.txt
test3/lib1/: CMakeLists.txt  hello.c
test4/include/: my.h
test4/src/: CMakeLists.txt  main.c
