PROJECT(HELLO)
SET(SRC_LIST main.c)
SET(AUTHOR ZHUTAO)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE common "${PROJECT_SOURCE_DIR}/common/*.c")

MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
MESSAGE(STATUS "This is PROJECT dir " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "The author is " ${AUTHOR})
ADD_EXECUTABLE(hello ${SRC_LIST} ${common})


