PROJECT(HELLO)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(src1)

INSTALL(FILES COPYRINGHT README DESTINATION share/doc/cmake/test2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(PROGRAMS build/bin/hello DESTINATION bin)

INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/test2)



