SET(LIBHELLO_SRC hello.c)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE common "${PROJECT_SOURCE_DIR}/common/*.c")
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC} ${common})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC} ${common})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/strage)

SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)


INSTALL(TARGETS hello hello_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

INSTALL(FILES hello.h DESTINATION include/hello)








