SET(LIBHELLO_SRC hello.c)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE common "${PROJECT_SOURCE_DIR}/common/*.c")
ADD_LIBRARY(hello1 SHARED ${LIBHELLO_SRC} ${common})
ADD_LIBRARY(hello_static1 STATIC ${LIBHELLO_SRC} ${common})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/strage1)

SET_TARGET_PROPERTIES(hello_static1 PROPERTIES OUTPUT_NAME "hello1")

SET_TARGET_PROPERTIES(hello1 PROPERTIES VERSION 1.2 SOVERSION 1)









